Closed
Bug 1350251
Opened 8 years ago
Closed 8 years ago
HTML5 video.mp4 does not play properly when e10s is disabled under the condition that hardware H 264 decoding is blocked
Categories
(Core :: Graphics: Layers, defect)
Tracking
()
VERIFIED
FIXED
mozilla55
| Tracking | Status | |
|---|---|---|
| firefox-esr45 | --- | unaffected |
| firefox52 | --- | unaffected |
| firefox-esr52 | --- | unaffected |
| firefox53 | --- | unaffected |
| firefox54 | --- | unaffected |
| firefox55 | + | verified |
People
(Reporter: alice0775, Assigned: dvander)
References
Details
(Keywords: regression, singleprocess)
Attachments
(2 files)
|
11.05 KB,
text/plain
|
Details | |
|
945 bytes,
patch
|
mattwoodrow
:
review+
|
Details | Diff | Splinter Review |
[Tracking Requested - why for this release]: HTML5 video does not play properly when e10s is disabled
The problem only happens if e10s is disabled
Steps To Reproduce:
1. Make sure e10s is disabled
2. Open e.g, https://videos.cdn.mozilla.net/uploads/mozillaorg/A%20different%20kind%20of%20browser.mp4
Actual Results:
Video is black.
Audio seems to have no problem.
Regression window:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=706d07027f02713274e0246df2eb4e472fc67efd&tochange=45a0933af0d661ef4e6aad33eb3c9d98c62eaef6
Regressed by Bug 1343814
Flags: needinfo?(dvander)
| Reporter | ||
Comment 1•8 years ago
|
||
(And if not reproduce, it may need to set media.hardware-video-decoding.enabled=false in order to simulate hardware H 264 decoding blocked)
Summary: HTML5 video does not play properly when e10s is disabled → HTML5 video.mp4 does not play properly when e10s is disabled
| Reporter | ||
Updated•8 years ago
|
Summary: HTML5 video.mp4 does not play properly when e10s is disabled → HTML5 video.mp4 does not play properly when e10s is disabled under the condition that hardware H 264 decoding is blocked
| Assignee | ||
Updated•8 years ago
|
Assignee: nobody → dvander
Status: NEW → ASSIGNED
Flags: needinfo?(dvander)
| Assignee | ||
Comment 3•8 years ago
|
||
Very dumb bug, I never set mProvider.
Attachment #8851316 -
Flags: review?(matt.woodrow)
Updated•8 years ago
|
Attachment #8851316 -
Flags: review?(matt.woodrow) → review+
Pushed by danderson@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/1275406f631b
Fix DXGIYCbCrTextureHost not setting a TextureSourceProvider. (bug 1350251, r=mattwoodrow)
Comment 5•8 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Updated•8 years ago
|
Flags: qe-verify+
Comment 6•8 years ago
|
||
I have managed to reproduce this issue by following the steps mentioned in comment 0 and comment 1 using Firefox 55.0a1 (Build Id:20170324030205) on Windows 10 64bit.
This issue is verified fixed on Firefox 55.0b3 (BuildId:20170619071723) using Windows 10 64bit, Ubuntu 16.04 64bit, macOS 10.11.6 and Windows 7 32bit.
You need to log in
before you can comment on or make changes to this bug.
Description
•