Fix DXGIYCbCrTextureHost not setting a TextureSourceProvider. (bug 1350251, r=mattwoodrow)

--HG--
extra : rebase_source : e6426ddb660ab2df6f263ff01a959deab86d60ce